front end completed

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,10 @@
 				</form>
 			</table>			
 		  </div>
+		  <label><b>All Stories</b></label>
 		  <div id="finalStory">
-								
+		  	<table id="storyTable" style="display:none;" border="1">
+		  	</table>				
 		  </div>
 		</div>
 	  </div>
